[FIX] Hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,3 @@
 *::-webkit-scrollbar {
     display: none;
 }
-
-* {
-    overflow-x: hidden;
-}
